--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "db:generate-types": "supabase gen types typescript --local > ./libs/supabase/schema.ts"
   },
   "dependencies": {
     "@nuxtjs/google-fonts": "^3.1.3",
+    "@nuxtjs/supabase": "^1.1.6",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "@wooorm/starry-night": "^3.3.0",
     "hast-util-to-html": "^9.0.0",
@@ -19,6 +21,7 @@
     "nuxt-primevue": "^0.3.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.49.1",
+    "supabase": "^1.150.0",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0"
   },
@@ -28,6 +31,7 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.23.0",
     "prettier": "^3.2.5",
     "typescript": "^5.3.3"
   }
