--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "@wooorm/starry-night": "^3.3.0",
     "hast-util-to-html": "^9.0.0",
     "marked": "^12.0.1",
+    "maska": "^2.1.11",
     "nuxt": "^3.10.3",
     "nuxt-primevue": "^0.3.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.49.1",
     "supabase": "^1.150.0",
     "vue": "^3.4.19",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "zod": "^3.23.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
