--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/supabase": "^1.1.6",
     "@nuxtjs/tailwindcss": "^6.11.4",
+    "@vueuse/core": "^10.9.0",
+    "@vueuse/nuxt": "^10.9.0",
     "@wooorm/starry-night": "^3.3.0",
+    "axios": "^1.6.8",
     "hast-util-to-html": "^9.0.0",
     "marked": "^12.0.1",
     "maska": "^2.1.11",
-    "nuxt": "^3.10.3",
     "nuxt-primevue": "^0.3.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.49.1",
@@ -34,6 +36,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.23.0",
+    "nuxt": "^3.12.2",
     "prettier": "^3.2.5",
     "typescript": "^5.3.3"
   }
