--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@guolao/vue-monaco-editor": "^1.5.1",
     "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/supabase": "^1.1.6",
     "@nuxtjs/tailwindcss": "^6.11.4",
@@ -20,6 +21,7 @@
     "@vueuse/nuxt": "^10.9.0",
     "@wooorm/starry-night": "^3.3.0",
     "axios": "^1.6.8",
+    "detect-programming-language": "^1.0.4",
     "hast-util-to-html": "^9.0.0",
     "marked": "^12.0.1",
     "maska": "^2.1.11",
@@ -27,12 +29,14 @@
     "primeicons": "^6.0.1",
     "primevue": "^3.49.1",
     "supabase": "^1.150.0",
+    "uuid": "^10.0.0",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0",
     "zod": "^3.23.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "eslint": "^8.57.0",
