--- a/package.json
+++ b/package.json
@@ -38,14 +38,16 @@
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
-    "@typescript-eslint/parser": "^7.13.1",
+    "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "eslint-plugin-vue": "^9.26.0",
     "nuxt": "^3.12.2",
-    "prettier": "^3.2.5",
-    "typescript": "^5.3.3"
+    "prettier": "^3.3.3",
+    "prettier-eslint": "^16.3.0",
+    "typescript": "^4.9.5",
+    "vue-eslint-parser": "^8.3.0"
   }
 }
