--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "zod": "^3.23.0"
   },
   "devDependencies": {
+    "@nuxtjs/color-mode": "^3.4.4",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
