--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@guolao/vue-monaco-editor": "^1.5.1",
     "@nuxtjs/google-fonts": "^3.1.3",
+    "@nuxtjs/seo": "^2.0.0-rc.19",
     "@nuxtjs/supabase": "^1.1.6",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "@vueuse/core": "^10.9.0",
@@ -38,9 +39,9 @@
     "@nuxtjs/color-mode": "^3.4.4",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.13.1",
-    "@typescript-eslint/parser": "^5.62.0",
-    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "^8.3.0",
+    "@typescript-eslint/parser": "^8.3.0",
+    "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^12.1.0",
@@ -48,7 +49,8 @@
     "nuxt": "^3.12.2",
     "prettier": "^3.3.3",
     "prettier-eslint": "^16.3.0",
-    "typescript": "^4.9.5",
-    "vue-eslint-parser": "^8.3.0"
-  }
+    "typescript": "^5.5.4",
+    "vue-eslint-parser": "^9.4.3"
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
