--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vueuse/nuxt": "^10.9.0",
     "@wooorm/starry-night": "^3.3.0",
     "axios": "^1.6.8",
+    "consola": "^3.2.3",
     "detect-programming-language": "^1.0.4",
     "hast-util-to-html": "^9.0.0",
     "marked": "^12.0.1",
@@ -41,6 +42,7 @@
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.3.0",
     "@typescript-eslint/parser": "^8.3.0",
+    "@unlok-co/nuxt-stripe": "^4.0.1",
     "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
