--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.6.8",
     "consola": "^3.2.3",
     "detect-programming-language": "^1.0.4",
+    "h3-zod": "^0.5.3",
     "hast-util-to-html": "^9.0.3",
     "marked": "^12.0.1",
     "maska": "^2.1.11",
