--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "onlygists",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -8,8 +9,8 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "db:generate-types": "supabase gen types typescript --local > ./libs/supabase/schema.ts",
-    "lint": "eslint . --ext .js,.vue,.ts",
-    "lint:fix": "eslint . --ext .js,.vue,.ts --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "format": "prettier --write ."
   },
   "dependencies": {
