feat: add webhook for Stripe payment processing and email notification

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@nuxtjs/seo": "^2.0.0-rc.19",
     "@nuxtjs/supabase": "^1.4.1",
     "@nuxtjs/tailwindcss": "^6.12.2",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "@vue-email/components": "^0.0.21",
+    "@vue-email/render": "^0.0.9",
     "@vueuse/core": "^10.9.0",
     "@vueuse/nuxt": "^10.9.0",
     "@wooorm/starry-night": "^3.3.0",
@@ -27,11 +30,13 @@
     "detect-programming-language": "^1.0.4",
     "h3-zod": "^0.5.3",
     "hast-util-to-html": "^9.0.3",
+    "jszip": "^3.10.1",
     "marked": "^12.0.2",
     "maska": "^2.1.11",
     "nuxt-primevue": "^0.3.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.49.1",
+    "resend": "4.0.1-alpha.0",
     "supabase": "^1.150.0",
     "uuid": "^10.0.0",
     "vue": "^3.5.12",
